# agentport

./: .dockerignore  .env.example  .gitignore  .seamsrc  AGENTS.md  Caddyfile  Dockerfile  README.md  dev.Dockerfile  docker-compose.prod.yml  docker-compose.yml  fly.toml  install.sh  review-comments.md
cli/: package.json  (+3 more)
server/: pyproject.toml  start.sh
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_policy_created_drop_exact_args.py  0003_migrate_wildcard_policies_to_settings.py  0004_drop_tool_approval_policy.py  0005_split_secrets_into_table.py  0006_replace_external_secret_refs_with_kms_fields.py  0007_add_email_verification_and_password_reset.py  0008_add_updating_tool_cache_to_installed_integration.py  0009_remove_integration_name_use_id_everywhere.py  0010_add_email_verification_codes.py  0011_add_totp.py  0012_add_additional_info_to_tool_calls.py  0013_add_google_login.py  0014_add_admin_and_waitlist.py  0015_add_subscription.py  0016_case_insensitive_user_email.py  0017_add_email_verification_attempts.py  0018_add_login_lockout_fields.py  0019_add_log_entry_impersonator.py  0020_add_approval_expiry_to_org.py  0021_add_custom_mcp_integration.py  0022_add_custom_api_integration.py  0022_add_tool_execution_rules.py  0023_add_tool_execution_rules.py
server/scripts/: mcp_speed_probe.py
server/src/agent_port/: analytics.py  api_client.py  auth_start.py  auth_tokens.py  config.py  db.py  dependencies.py  main.py  rate_limit.py  token_auth.py  totp.py  upstream_safety.py
server/tests/: conftest.py  test_api_client.py  test_main.py
(+298 files in other folders)
